--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		风声月耳
 	</title>
 
-	<link rel="stylesheet" type="text/css" href="dx.css">
 </head>
 <body>
+	<img src="../images/0717.jpg">
 	<h1>月耳听风</h1>
 	<h4>
 		缓存真的慢 刷新半天没反应。
