--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<style type="text/css">
 			body{
 				background-image: url(./images/0717.jpg );
-				background-size: 100% 100%;
-				height: 100%;
+				background-size: cover;
+				background-repeat:no-repeat;
 			}
 		</style>
 
