--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 				background-size: cover;
 				background-repeat:no-repeat;
 			}
+			div{
+				position: 0 60%;
+			}
 		</style>
 
 </head>
 <body>
-	
+	<div>
 	<h1>春晓</h1>
 	<p>春眠不觉晓</p>
 	<p>处处闻啼鸟</p>
 	<p>夜来风雨声</p>
 	<p>花落知多少</p>
-	
+	</div>
 	
 </body>
 </html>
