--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 				background-size: cover;
 				background-repeat:no-repeat;
 			}
-			div{
-				position: 0 60%;
-			}
+			@keyframes myfirsts{
+
+	from{
+		opacity: 0}
+	to{
+		opacity: 100}
+}
+
+p{
+	animation:myfirsts 5s infinite
+	
+}
+
 		</style>
 
 </head>
