--- a/index.html
+++ b/index.html
@@ -11,19 +11,9 @@
 				background-size: cover;
 				background-repeat:no-repeat;
 			}
-			@keyframes myfirsts{
-
-	from{
-		opacity: 0}
-	to{
-		opacity: 100}
-}
-
-p{
-	animation:myfirsts 5s infinite
-	
-}
-
+			div{
+				position: center;
+			}
 		</style>
 
 </head>
@@ -38,3 +28,4 @@ p{
 	
 </body>
 </html>
+
