--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style type="text/css">
 			body{
 				background-image: url(./images/鼠绘苹果.jpg );
-				background-size: cover;
+				background-size: 500px 500px;
 				background-repeat:no-repeat;
 			}
 			div{
