--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 				background-image: url(./images/鼠绘苹果.jpg );
 				background-size: 500px 500px;
 				background-repeat:no-repeat;
+				float:left;
 			}
 			div{
 				position: center;
