--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 	</title>
 	<style type="text/css">
 			body{
+				
+				
+			}
+			div{
 				background-image: url(./images/鼠绘苹果.jpg );
 				background-size: 500px 500px;
 				background-repeat:no-repeat;
 				margin-left:300px;
-			}
-			div{
-				position: center;
 			}
 		</style>
 
@@ -21,6 +22,7 @@
 <body>
 	<audio src="./audio/时间煮雨.mp3" controls="controls">抱歉浏览器不支持此格式</audio>
 	<div>
+		<div></div>
 	<h1>春晓</h1>
 	<p>春眠不觉晓</p>
 	<p>处处闻啼鸟</p>
