--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-	<audio src="./audio/时间煮雨.mp3" controls="controls">抱歉浏览器不支持此格式</audio>
+	<audio src="./audio/时间煮雨.mp3" controls="controls" autoplay="autoplay">抱歉浏览器不支持此格式</audio>
 	<div>
 		<div></div>
 	<h1>春晓</h1>
