--- a/index.html
+++ b/index.html
@@ -1,87 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>四季变化动画</title>
-	<style type="text/css">
-	html,body,page{
-		height: 100%;
-		width: 100%;
-
-	}
-	@keyframes myc {
-		0%{opacity: 0;}
-		20%{opacity: 100;}
-		40%{opacity: 0;}
-		100%{opacity: 0;}
-
-	}
-		@keyframes myx {
-		0%{opacity: 0;}
-		20%{opacity: 0;}
-		40%{opacity: 100;}
-		60%{opacity: 0;}
-		100%{opacity: 0;}
-
-	}
-		@keyframes myq {
-		0%{opacity: 0;}
-		40%{opacity: 0;}
-		60%{opacity: 100;}
-		80%{opacity: 0;}
-		100%{opacity: 0;}
-
-	}
-		@keyframes myd {
-		0%{opacity: 0;}
-		60%{opacity: 0;}
-		80%{opacity: 100;}
-		100%{opacity: 0;}
-
-	}
-	#c{
-		background-color:green;
-		animation:myc 5s infinite;
-		font-size: 200px;
-		padding-left:30%;
-		padding-top:30%;
-		position: absolute;
-	}
-	
-	#x{
-		background-color:red;
-		animation:myx 5s infinite;
-		font-size: 200px;
-		padding-left:30%;
-		padding-top:30%;
-		position: absolute;
-	}
-	#q{
-		background-color:yellow;
-		animation:myq 5s infinite;
-		font-size: 200px;
-		padding-left:30%;
-		padding-top:30%;
-		position: absolute;
-	}
-	#d{
-		background-color:black;
-		color: white;
-		animation:myd 5s infinite;
-		font-size: 200px;
-		padding-left:30%;
-		padding-top:30%;
-		position: absolute;
-	}
-	}
-
-</style>
+	<title>11</title>
 </head>
 <body>
-	<page id="c">春</page>
-	<page id="x">夏</page>
-	<page id="q">秋</page>
-	<page id="d">冬</page>
+<div>请输入想要找的物品名：<input type="text" name="" class="input"></div>
+<div>该物品在：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" name="" class="output"></div>
+</br>
+<button class="chaxun">查询</button>
+<button class="tianjia">添加</button>
+<script type="text/javascript">
+	var input=document.querySelector(".input");
+	var output=document.querySelector(".output");
+	var button1=document.querySelector(".chaxun");
+	var button2=document.querySelector(".tianjia");
+	var arr1=["毛巾","书","充电器"];
+	var arr2=["立柜里","书架上","沙发"];
+	
+	
+	function sf(){
+		for( var i=0;i<arr1.length;i++){
+		if(input.value==arr1[i]){
+		   output.value=arr2[i];
+		 }
+		}
+
+	}
+		 function fn(){
+		
+		 	if(sf()){
+		 		return;
+
+		 	}
+		 	else{
+				alert("找不到该物品");
+				return ;
+			}
+		 	
+		
+	}
+
+			
+	
+	button1.addEventListener("click",function(){
+		fn();
+	},false);
+	button2.addEventListener("click",function(){
+		if(input.value!=null&&output.value!=null){
+		arr1.push(input.value);
+		arr2.push(output.value);
+		input.value="";
+		output.value="";
+		alert("添加成功");
+		}
+	})
+	
+	
+	
+	
+	
 
 
+
+</script>
 </body>
 </html>
