--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 	<title>11</title>
+	<style type="text/css">
+		div{
+			font-size: 30px;
+		}
+		button{
+			font-size: 30px;
+		}
+
+	</style>
 </head>
 <body>
 <div>请输入想要找的物品名：<input type="text" name="" class="input"></div>
