--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 		button{
 			font-size: 30px;
 		}
+		.input{
+			font-size: 30px;
+		}
+		.output{
+			font-size: 30px;
+		}
+
 
 	</style>
 </head>
