--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 </br>
 <button class="chaxun">查询</button>
 <button class="tianjia">添加</button>
+<br/>
+
+<div>说明：1.输入要查询的物品名,点击查询即可显示物品的位置。</div><br/>
+<div>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp2.输入要查询的物品名和物品的位置后点击添加即可添加新物品及它的位置。</div>
 <script type="text/javascript">
 	var input=document.querySelector(".input");
 	var output=document.querySelector(".output");
